# filter_framework

./: CMakeLists.txt  README.md  filterFramework.cpp  filterFramework.h  main.cpp  options.cpp  options.h
resources/: config.xml
